deleting-user completed

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,11 +12,13 @@ hfpang:
     name: hfpang
     email: hfpang@example.com
     password_digest: <%= User.digest('asdasd') %>
+    admin: true
 
 michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling Archer
