--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,30 +9,40 @@
 #   email: MyString
 
 hfpang:
-    name: hfpang
-    email: hfpang@example.com
-    password_digest: <%= User.digest('asdasd') %>
-    admin: true
+  name: hfpang
+  email: hfpang@example.com
+  password_digest: <%= User.digest('asdasd') %>
+  admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
