--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 !/tmp/pids/
 !/tmp/pids/.keep
 
+# Ignore uploaded test images.
+/public/uploads
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
